--- a/FirstHomeWork/Views/CustomerAccount/Index.cshtml
+++ b/FirstHomeWork/Views/CustomerAccount/Index.cshtml
@@ -1,14 +1,18 @@
 ﻿@model IEnumerable<FirstHomeWork.Models.客戶銀行資訊>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "客戶銀行資訊";
 }
 
-<h2>Index</h2>
+<h2>客戶銀行資訊</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("新增", "Create")
 </p>
+<form>
+    <input type="text" name="search" />
+    <input type="submit" name="submit" value="搜尋" />
+</form>
 <table class="table">
     <tr>
         <th>
