增加檢視表

--- a/FirstHomeWork/Views/Customer/Edit.cshtml
+++ b/FirstHomeWork/Views/Customer/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FirstHomeWork.Models.客戶資料
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "編輯";
 }
 
-<h2>Edit</h2>
+<h2>編輯</h2>
 
 
 @using (Html.BeginForm())
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("回列表", "Index")
 </div>
 
 @section Scripts {
