--- a/FirstHomeWork/Views/CustomerAccount/Delete.cshtml
+++ b/FirstHomeWork/Views/CustomerAccount/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FirstHomeWork.Models.客戶銀行資訊
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "刪除";
 }
 
 <h2>Delete</h2>
@@ -74,7 +74,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("回列表", "Index")
         </div>
     }
 </div>
