--- a/FirstHomeWork/Views/ContactPerson/Index.cshtml
+++ b/FirstHomeWork/Views/ContactPerson/Index.cshtml
@@ -57,9 +57,9 @@
             @Html.DisplayFor(modelItem => item.客戶資料.客戶名稱)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("修改", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("細項", "Details", new { id = item.Id }) |
+            @Html.ActionLink("刪除", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
