--- a/FirstHomeWork/Views/Customer/Index.cshtml
+++ b/FirstHomeWork/Views/Customer/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     @Html.ActionLink("新增", "Create")
 </p>
+<p>
+    @Html.ActionLink("客戶細部資料表", "Index", "vw_CustomerDetailsCount")
+</p>
 <form>
     <input type="text" name="search" />
     <input type="submit" name="submit" value="搜尋" />
@@ -57,9 +60,9 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("修改", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("細項", "Details", new { id=item.Id }) |
+            @Html.ActionLink("刪除", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
