--- a/FirstHomeWork/Views/CustomerAccount/Details.cshtml
+++ b/FirstHomeWork/Views/CustomerAccount/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>細部資料</h2>
 
 <div>
     <h4>客戶銀行資訊</h4>
@@ -69,6 +69,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("編輯", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("回列表", "Index")
 </p>
