--- a/FirstHomeWork/Views/ContactPerson/Index.cshtml
+++ b/FirstHomeWork/Views/ContactPerson/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@model IEnumerable<FirstHomeWork.Models.客戶聯絡人>
+﻿@model IPagedList<FirstHomeWork.Models.客戶聯絡人>
 
 @{
     ViewBag.Title = "客戶聯絡人";
 }
+@*@section style{
+    <link href="~/Content/PagedList.css" rel="stylesheet"/>
+}*@
+<link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 <h2>客戶聯絡人</h2>
 
@@ -16,22 +20,22 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.職稱)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().職稱)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.姓名)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().姓名)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.手機)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().手機)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.電話)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().電話)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.客戶資料.客戶名稱)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().客戶資料.客戶名稱)
         </th>
         <th></th>
     </tr>
@@ -65,3 +69,5 @@
 }
 
 </table>
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }))
