--- a/FirstHomeWork/Views/CustomerAccount/Index.cshtml
+++ b/FirstHomeWork/Views/CustomerAccount/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model IEnumerable<FirstHomeWork.Models.客戶銀行資訊>
+﻿@model IPagedList<FirstHomeWork.Models.客戶銀行資訊>
 
 @{
     ViewBag.Title = "客戶銀行資訊";
 }
-
+<link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 <h2>客戶銀行資訊</h2>
 
 <p>
@@ -16,22 +16,22 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.銀行名稱)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().銀行名稱)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.銀行代碼)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().銀行代碼)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.分行代碼)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().分行代碼)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.帳戶名稱)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().帳戶名稱)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.帳戶號碼)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().帳戶號碼)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.客戶資料.客戶名稱)
+            @Html.DisplayNameFor(model => model.FirstOrDefault().客戶資料.客戶名稱)
         </th>
         <th></th>
     </tr>
@@ -66,3 +66,4 @@
 }
 
 </table>
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }))
