* 在「客戶聯絡人列表」頁面新增篩選功能，可以用「職稱」欄位進行資料篩選 * 在「客戶資料列表」頁面新增篩選功能，可以用「客戶分類」欄位進行資料篩選 (下拉選單)

--- a/FirstHomeWork/Views/Customer/Index.cshtml
+++ b/FirstHomeWork/Views/Customer/Index.cshtml
@@ -13,8 +13,30 @@
     @Html.ActionLink("客戶細部資料表", "Index", "vw_CustomerDetailsCount")
 </p>
 <form>
-    <input type="text" name="search" />
-    <input type="submit" name="submit" value="搜尋" />
+    <table>
+        <tr>
+            <td colspan="4"><p>搜尋條件</p></td>
+        </tr>
+        <tr>
+            <td>
+                客戶名稱
+            </td>
+            <td>
+                <input type="text" name="search1" />
+            </td>
+            <td>客戶分類</td>
+            <td>
+                @Html.DropDownList("DPClass", "--請選擇--")
+            </td>
+        </tr>
+        <tr>
+            <td colspan="4">
+                <p>
+                    <input type="submit" name="submit" value="搜尋" />
+                </p>
+            </td>
+        </tr>
+    </table>
 </form>
 <table class="table">
     <tr>
