--- a/FirstHomeWork/Views/CustomerAccount/Index.cshtml
+++ b/FirstHomeWork/Views/CustomerAccount/Index.cshtml
@@ -12,6 +12,8 @@
 <form>
     <input type="text" name="search" />
     <input type="submit" name="submit" value="搜尋" />
+    @Html.ActionLink("匯出Excel", "ExcelOutput")
+
 </form>
 <table class="table">
     <tr>
